@@ -2335,8 +2335,9 @@ fine-grained control over the interactions between hit testing and clipping.</p>
 
 <p>The <a>SVGClipPathElement</a> interface corresponds to the <a>'clipPath'</a> element.</p>
 
-<pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGTransformableElement</a> {
+<pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGElement</a> {
   readonly attribute <a>SVGAnimatedEnumeration</a> <a href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
+  readonly attribute <a>SVGAnimatedTransformList</a> <a href="#SVGClipPathElement__transform">transform</a>;
 };
 
 <a>SVGClipPathElement</a> implements <a>SVGUnitTypes</a>;</pre>
@@ -2352,7 +2353,13 @@ fine-grained control over the interactions between hit testing and clipping.</p>
 Corresponds to attribute <a>'clipPathUnits'</a> on the given
 <a>'clipPath'</a> element.  Takes one of the constants defined in
 <a>SVGUnitTypes</a>.
+</div>
+</dd>
 
+<dt id="SVGClipPathElement__transform" class="attribute first-child"><b>transform</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedTransformList</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'transform'</a> on the given element.
 </div>
 </dd>
 </dl>
@@ -2413,7 +2420,6 @@ Corresponds to value <span class="attr-value">'alpha'</span>.
 Corresponds to attribute <a>'maskUnits'</a> on the given
 <a>'mask element'</a> element.  Takes one of the constants defined in
 <a>SVGUnitTypes</a>.
-
 </div>
 </dd>
 
