@@ -11,11 +11,11 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-01-15 name=dcterms.issued>
+  <meta content=2013-01-18 name=dcterms.issued>
   <meta content="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html"
    name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2013/ED-css-masking-20130115/"
+  <meta content="http://www.w3.org/TR/2013/ED-css-masking-20130118/"
    name=dcterms.identifier>
   <link href="#contents" rel=contents>
   <link href="#index" rel=index>
@@ -30,7 +30,7 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 15 January
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 18 January
     2013</h2>
 
    <dl>
@@ -38,7 +38,7 @@
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130115/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130118/-->
 
     <dt>Latest version:
 
@@ -3962,10 +3962,13 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    element.
 
   <pre class=idl>interface <b>SVGClipPathElement</b> : <a
-   href="http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGTransformableElement">SVGTransformableElement</a> {
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGElement">SVGElement</a> {
   readonly attribute <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
+  readonly attribute <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#InterfaceSVGAnimatedTransformList">SVGAnimatedTransformList</a> <a
+   href="#SVGClipPathElement__transform">transform</a>;
 };
 
 <a
@@ -3990,6 +3993,16 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>clipPath</code>’</a> element. Takes one of the
        constants defined in <a
        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>.</div>
+
+     <dt class="attribute first-child"
+      id="SVGClipPathElement__transform"><b>transform</b><span
+      class=idl-type-parenthetical> (readonly <a
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#InterfaceSVGAnimatedTransformList">SVGAnimatedTransformList</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#TransformAttribute">‘<code
+       class=property>transform</code>’</a> on the given element.</div>
     </dl>
   </dl>
 
