@@ -1,3 +1,6 @@
+2013-01-17  Dirk Schulze  <dschulze@adobe.com>
+	Make SVGClipPathElement inherit from SVGElement and add 'transform' attribute to interface.
+
 2013-01-15  Dirk Schulze  <dschulze@adobe.com>
 	Remove implementing of SVGTest as discussed on SVG WG meeting of 01-10-2013.
 
